test/resources/parser/failing/FunDefError3.grading.amy
object FunDef
  def foo(i): Int(32) := 42 end foo
end FunDef
